--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Svante
 version=1.0.1
-author=Arduino Verkstad
-maintainer=Arduino Verkstad
+author=Arduino LLC
+maintainer=Arduino LLC
 sentence=Svante 
 paragraph=Svante
 category=Other
