Changing category to device control

--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Arduino LLC
 maintainer=Arduino LLC
 sentence=Svante 
 paragraph=Svante
-category=Other
+category=Device Control
 url=https://github.com/arduinoverkstad/Svante
 architectures=avr
